--- a/fontello/config.json
+++ b/fontello/config.json
@@ -7,22 +7,22 @@
   "ascent": 850,
   "glyphs": [
     {
-      "uid": "767fede84586366cd7d6c835be745454",
+      "uid": "bf882b30900da12fca090d9796bc3030",
+      "css": "mail",
+      "code": 59394,
+      "src": "fontawesome"
+    },
+    {
+      "uid": "6cc7af3e5b55720bcb6ef68372ce24be",
+      "css": "facebook-official",
+      "code": 62000,
+      "src": "fontawesome"
+    },
+    {
+      "uid": "6a9f3405aba67bcaee81e7ea38946b27",
       "css": "mobile",
-      "code": 59392,
-      "src": "entypo"
-    },
-    {
-      "uid": "ccc2329632396dc096bb638d4b46fb98",
-      "css": "mail-alt",
-      "code": 61664,
-      "src": "fontawesome"
-    },
-    {
-      "uid": "4743b088aa95d6f3b6b990e770d3b647",
-      "css": "facebook-squared",
-      "code": 62216,
-      "src": "fontawesome"
+      "code": 59393,
+      "src": "linecons"
     },
     {
       "uid": "0f6a2573a7b6df911ed199bb63717e27",
